# streaming-support-agent

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_add_streaming_available.py  002_create_streaming_subscription.py  003_create_conversation_tables.py
app/: main.py  orchestrator.py
app/agents/: catalog.py  factory.py  guardrail.py  human_handoff.py  knowledge.py  rental_history.py  subscription.py  triage.py
app/api/: routes.py
app/core/: config.py  llm.py  logging.py  tracing.py
app/db/: history.py  models.py  session.py
app/plugins/: catalog_plugin.py  handoff_plugin.py  kb_plugin.py  rental_plugin.py  subscription_plugin.py
app/schemas/: response.py
docs/: Initial_plan_multi-agent_ai_support_75ca371f.plan.md  ai_usage.md  cursor_chat_2_thread.md  cursor_chats_1_thread.md  design.md  implementation_plan.md
evals/: eval_cases.json  run_evals.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgentBubble.tsx  ChatWindow.tsx  InputBar.tsx  MessageList.tsx  SessionSidebar.tsx  StatusBar.tsx  UserBubble.tsx
frontend/src/hooks/: useChat.ts  useSessions.ts
kb/: articles.json
mcp/: server.py  test_tools.py
tests/: conftest.py  test_agents.py  test_guardrails.py  test_tools.py
