[project]
name = "streaming-support-agent"
version = "0.1.0"
description = "AI-powered streaming support agent built with Semantic Kernel and FastAPI"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-dotenv==1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Semantic Kernel — HandoffOrchestration requires >=1.43.0
    "semantic-kernel>=1.43.0",
    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    # Observability
    "structlog==24.4.0",
    "langfuse>=2.50.0",
    # MCP
    "mcp>=1.2.0",
    # HTTP client
    "httpx>=0.27.0",
    # Utilities
    "tenacity>=9.0.0",
    "python-multipart==0.0.18",
    "sse-starlette>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
]

[tool.uv]
prerelease = "allow"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
